--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "adm-zip": "^0.4.11",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "hoek": "^4.2.1",
+    "parsejson": "0.0.3",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
